# gendocs/controllers/InvestmentService.js
@@ -54,16 +54,13 @@ exports.getinvestment = function(args, res, next) {
   var examples = {};
   examples['application/json'] = {
   "estimated_land_date" : "2017-05-01",
-  "description" : "Marriott hotels wishes to open in a new part of Manchester under-served by its existing hotels",
+  "total_investment" : 145000000,
+  "client_requirements" : "Marriott are looking to expand into a city or town where they do not currently have a presence, or have room for expansion....",
   "approved_landed" : true,
-  "referral_source_activity_event" : "Moscow Hotels Expo 2017",
-  "fdi_type" : {
-    "name" : "Merger",
-    "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
-  },
+  "non_fdi_r_and_d_budget" : false,
+  "foreign_equity_investment_documents" : "",
   "operations_commenced_documents" : "",
   "not_shareable_reason" : "Company has asked us to keep project quiet until official announcement",
-  "approved_high_value" : true,
   "referral_source_activity_marketing" : {
     "name" : "Press advertisement",
     "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
@@ -75,155 +72,88 @@ exports.getinvestment = function(args, res, next) {
     "first_name" : "Annette"
   },
   "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851",
+  "number_new_jobs" : 100,
   "approved_non_fdi" : true,
   "sector" : {
     "name" : "Advanced Engineering",
     "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
   },
-  "fdi_type_documents" : "",
+  "total_investment_documents" : "",
   "approved_commitment_to_invest" : true,
-  "phase" : {
-    "name" : "Active",
-    "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
-  },
   "approved_fdi" : true,
-  "referral_source_activity_website" : {
-    "name" : "DIT Regional Website",
-    "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
-  },
   "actual_land_date" : "2018-11-01",
   "investor_company" : "",
+  "address_postcode" : "SN1 1AA",
   "project_code" : "P-01234567",
   "referral_source_activity" : {
     "name" : "Cold Call",
     "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
   },
+  "r_and_d_budget_documents" : "",
+  "priority" : "aeiou",
   "project_shareable" : true,
+  "foreign_equity_investment" : 100000000,
+  "export_revenue_documents" : "",
   "referral_source_advisor" : "",
   "nda_signed" : false,
   "investment_type" : {
     "name" : "FDI",
     "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
   },
-  "non_fdi_type" : {
-    "name" : "Advanced Engineering Supply Chain",
-    "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
-  },
+  "export_revenue" : false,
+  "uk_company" : "",
   "name" : "Marriot Hotels - New hotel in Manchester",
-  "approved_good_value" : true,
+  "average_salary_documents" : "",
+  "client_considering_other_countries" : false,
+  "value_complete" : false,
   "actual_land_date_documents" : "",
   "business_activities" : "",
-  "intermediate_company" : {
-    "name" : "Company Registered Name Ltd",
-    "id" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91"
-  }
-};
-  if (Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  } else {
-    res.end();
-  }
-}
-
-exports.getinvestmentrequirements = function(args, res, next) {
-  /**
-   * Returns the Requirements information associated with a project @TODO document WHY
-   * Passing in the UUID of an investment project returns the value associated with it 
-   *
-   * investmentId UUID UUID for a Data Hub investment project
-   * returns InvestmentRequirements
-   **/
-  var examples = {};
-  examples['application/json'] = {
   "requirements_complete" : false,
-  "competitor_countries" : "",
-  "client_requirements" : "Marriott are looking to expand into a city or town where they do not currently have a presence, or have room for expansion....",
-  "uk_company" : {
-    "name" : "Company Registered Name Ltd",
-    "id" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91"
+  "likelihood_of_landing" : 60,
+  "description" : "Marriott hotels wishes to open in a new part of Manchester under-served by its existing hotels",
+  "referral_source_activity_event" : "Moscow Hotels Expo 2017",
+  "fdi_type" : {
+    "name" : "Merger",
+    "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
   },
+  "client_cannot_provide_total_investment" : false,
+  "uk_region_locations" : "",
+  "client_cannot_provide_foreign_investment" : false,
+  "approved_high_value" : true,
   "strategic_drivers" : "",
+  "number_safeguarded_jobs_documents" : "",
+  "r_and_d_budget" : false,
   "address_line_1" : "19 Railway Cuttings",
-  "address_postcode" : "SN1 1AA",
-  "client_considering_other_countries" : false,
   "site_decided" : false,
   "address_line_3" : "Surrey",
   "address_line_2" : "East Cheam",
-  "uk_region_locations" : ""
-};
-  if (Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  } else {
-    res.end();
-  }
-}
-
-exports.getinvestmentteam = function(args, res, next) {
-  /**
-   * Returns the team information associated with a project
-   * Passing in the UUID of an investment project returns the team associated with it 
-   *
-   * investmentId UUID UUID for a Data Hub investment project
-   * returns InvestmentTeam
-   **/
-  var examples = {};
-  examples['application/json'] = {
-  "project_assurance_advisor" : "",
-  "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851",
-  "project_manager" : {
-    "last_name" : "Adviser",
-    "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851",
-    "first_name" : "Annette"
-  },
-  "project_manager_team" : {
-    "name" : "Sector Advisory Services",
+  "fdi_type_documents" : "",
+  "referral_source_activity_website" : {
+    "name" : "DIT Regional Website",
     "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
   },
-  "project_assurance_team" : ""
-};
-  if (Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  } else {
-    res.end();
-  }
-}
-
-exports.getinvestmentvalue = function(args, res, next) {
-  /**
-   * Returns the Value information associated with a project
-   * Passing in the UUID of an investment project returns the value associated with it 
-   *
-   * investmentId UUID UUID for a Data Hub investment project
-   * returns InvestmentValue
-   **/
-  var examples = {};
-  examples['application/json'] = {
-  "total_investment" : 145000000,
   "number_safeguarded_jobs" : 100,
   "new_tech_to_uk_documents" : "",
-  "r_and_d_budget_documents" : "",
   "average_salary" : {
     "name" : "£35,000",
     "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
   },
-  "client_cannot_provide_total_investment" : false,
   "government_assistance" : false,
-  "foreign_equity_investment" : 100000000,
-  "non_fdi_r_and_d_budget" : false,
-  "export_revenue_documents" : "",
-  "client_cannot_provide_foreign_investment" : false,
-  "foreign_equity_investment_documents" : "",
-  "export_revenue" : false,
+  "competitor_countries" : "",
+  "stage" : {
+    "name" : "Active",
+    "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
+  },
   "new_tech_to_uk" : false,
-  "number_safeguarded_jobs_documents" : "",
-  "r_and_d_budget" : false,
-  "average_salary_documents" : "",
-  "value_complete" : false,
-  "number_new_jobs" : 100,
-  "total_investment_documents" : "",
+  "non_fdi_type" : {
+    "name" : "Advanced Engineering Supply Chain",
+    "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
+  },
+  "approved_good_value" : true,
+  "intermediate_company" : {
+    "name" : "Company Registered Name Ltd",
+    "id" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91"
+  },
   "number_new_jobs_documents" : ""
 };
   if (Object.keys(examples).length > 0) {
@@ -248,9 +178,21 @@ exports.getprojectsforcompany = function(args, res, next) {
   examples['application/json'] = {
   "count" : 30,
   "results" : [ {
+    "team_complete" : false,
     "name" : "Marriot Hotels - New hotel in Manchester",
+    "project_assurance_advisor" : "",
     "project_code" : "P-01234567",
-    "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
+    "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851",
+    "project_manager" : {
+      "last_name" : "Adviser",
+      "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851",
+      "first_name" : "Annette"
+    },
+    "project_manager_team" : {
+      "name" : "Sector Advisory Services",
+      "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851"
+    },
+    "project_assurance_team" : ""
   } ]
 };
   if (Object.keys(examples).length > 0) {
@@ -300,42 +242,6 @@ exports.patchInvestment = function(args, res, next) {
    *
    * investmentId String UUID for a Data Hub investment project
    * investment InvestmentProject Investment project  data to update
-   * no response value expected for this operation
-   **/
-  res.end();
-}
-
-exports.patchInvestmentRequirements = function(args, res, next) {
-  /**
-   * updates an investment requirements object, from a partial JSON object
-   * Patches an existing investment requirements object
-   *
-   * investmentId String UUID for a Data Hub investment project
-   * investment InvestmentRequirements Investment project requirements data to update
-   * no response value expected for this operation
-   **/
-  res.end();
-}
-
-exports.patchInvestmentTeam = function(args, res, next) {
-  /**
-   * updates an investment team object, from a partial JSON object
-   * Patches an existing investment team object
-   *
-   * investmentId String UUID for a Data Hub investment project
-   * investment InvestmentTeam Investment project  data to update
-   * no response value expected for this operation
-   **/
-  res.end();
-}
-
-exports.patchInvestmentValue = function(args, res, next) {
-  /**
-   * updates an investment project value object, from a partial JSON object
-   * Patches an existing investment project value object
-   *
-   * investmentId String UUID for a Data Hub investment project
-   * investment InvestmentValue Investment project value data to update
    * no response value expected for this operation
    **/
   res.end();
